# tblite-gpu

./: .gitignore  Makefile  README.md  kernel.cu  meson.build  pyproject.toml
src/: kernel.cu  main.cu  meson.build  types.h
src/tblite_gpu/: hamiltonian.py  types.py
tests/: test_hamiltonian.py  test_kernel.cu
